--- a/_.html
+++ b/_.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0"/>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no"/> -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <meta name="HandheldFriendly" content="true">
     <title>d.free</title>
     <script src="src/tweenmax.js"></script>
