Font_size_adjust

--- a/_.html
+++ b/_.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="stage" id="stage_2">
-            <h1 class="r_0 c_0 title b">Pixel Perfect <br/>Advertising</h1>
+            <h1 class="r_0 c_0 title b">Pixel <br/>Perfect <br/>Advertising</h1>
             <!-- <div class="text_body r_1 c_0">Arm-in-arm with Relish Creative we've developed the most effective online advertising workflow through the years. It's became so precise should be an industry standard.</div>
 
             <div class="text_body r_2 c_0">With this approach you can minimise the back-and-forth play with clients. A clean, quick, smooth and effective way to deal with large campaigns and complex client needs.</div> -->
