--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0"/>
+    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <meta name="HandheldFriendly" content="true">
     <title>d.free</title>
