--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div id="cover"></div>
 </body>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-22950579-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -105,7 +105,7 @@
   gtag('js', new Date());
   gtag('config', 'UA-22950579-1');
 </script>
-
+-->
 </html>
 
 
