--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <body id="body">
     <img id="anim_cover" src="img/anim.svg"/>
     <div id="anim">
-        <canvas id="canvas" width="1050" height="1050"></canvas>
+        <div id="anim_move">
+            <canvas id="canvas" width="1050" height="1050"></canvas>
+        </div>
     </div>
     <div id="grid">
         <div class="stage" id="stage_0">
