--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
         </div>
     </div>
     <div id="grid">
-        <div class="stage" id="stage_0">
+        <section class="stage" id="stage_0">
             <h1 class="r_0 c_0 title b">Your<br/>Universal<br/>Developer</h1>
             <div class="text_body r_2 c_1 lh">I'm a UK based frontend developer and agency freelancer having spent the past 10 years exploring the evolving ways to deliver the quickest, most reliable and prettiest software possible... served online.</div>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_1">
+        <section class="stage" id="stage_1">
             <h1 class="r_0 c_0 title b">Naturally <br/>Online</h1>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_2">
+        <section class="stage" id="stage_2">
             <h1 class="r_0 c_0 title b">Pixel <br/>Perfect <br/>Advertising</h1>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_3">
+        <section class="stage" id="stage_3">
             <h1 class="r_0 c_0 title b">Rapid <br/>Prototypes</h1>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_4">
+        <section class="stage" id="stage_4">
             <h1 class="r_0 c_0 title b">Mobile Apps <br/>& AR</h1>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_5">
+        <section class="stage" id="stage_5">
             <h1 class="r_0 c_0 title b">Gaming <br/>& VR</h1>
-        </div>
+        </section>
 
 
-        <div class="stage" id="stage_6">
+        <section class="stage" id="stage_6">
             <h1 class="r_0 c_0 title b">Graphic <br/>Design</h1>
-        </div>
+        </section>
 
-        <div class="stage" id="stage_7">
+        <section class="stage" id="stage_7">
             <h1 class="r_0 c_0 title b">Contact & <br/>Booking</h1>
             <div class="text_body r_2 c_1 lh">For work specific references or booking you can reach me any time at <span class="b u hand" id="mail"></span> or on my <span class="b u hand" id="linkedin">LinkedIn</span> profile.</div>
-        </div>
+        </section>
 
     </div>
     
