--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
     </div>
     
-    <div id="footer">
+    <footer id="footer">
         <div class="text_body r_4 c_1 mid menu_pos"><span id="name" class="b">Dávid Szücs</span><br/><br/><span id="title" class="l">Swiss Army<br/>Freelancer</span></div>
-    </div>
+    </footer>
 
     <div id="menu">
         <ul>
