--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="text_body r_4 c_1 mid menu_pos"><span id="name" class="b">Dávid Szücs</span><br/><br/><span id="title" class="l">Swiss Army<br/>Freelancer</span></div>
     </footer>
 
-    <div id="menu">
+    <nav id="menu">
         <ul>
             <li class="menu_item" id="menu_7">
                 111
@@ -95,7 +95,7 @@
                 000
             </li>
         </ul>
-    </div>
+    </nav>
     <div id="cover"></div>
 </body>
 
