--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body id="body">
     <img id="anim_cover" src="img/anim.svg"/>
+    <div id="loader"></div>
     <div id="anim">
         <div id="anim_move">
             <canvas id="canvas" width="1050" height="1050"></canvas>
