--- a/ZoomTest/index.html
+++ b/ZoomTest/index.html
@@ -4,6 +4,7 @@
 	<title>Zoom Test</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 </head>
 <body onload="init()">
