--- a/assets/AnimatedIcons/index.html
+++ b/assets/AnimatedIcons/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>FFVIII</title>
+    <title>Animated Icons</title>
     
     <style type="text/css">
         
