--- a/com/varhomokis/index.html
+++ b/com/varhomokis/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.0/easing/EasePack.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.0/TweenLite.min.js"></script>
 
-    <!-- <script src="anim.js"></script> -->
+    <script src="anim.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
@@ -26,6 +26,8 @@
         	position: relative;
         	width: 100%;
         	height: 100%;
+            min-height: 640px;
+            display: none;
         }
         .centered {
             margin-left: 50%;
@@ -36,11 +38,8 @@
             text-align: center;
         }
         #logo {
-            margin-top: 20%;
-            width: 100%;
-        }
-        #logo_img {
-            width: 60%
+            padding-top: 140px;
+            width: 50%
         }
         #slogan {
             margin-top: 63px;
@@ -53,28 +52,58 @@
         #cta {
             position: absolute;
             left:0;
-            bottom: 20%;
+            bottom: 30%;
             font-size: 3em;
+        }
+        #product {
+            position: absolute;
+            width:50%;
+            left:0;
+            bottom: 0;
         }
         @media only screen and (orientation: portrait) {
             #logo {
-                margin-top: 60%;
+                padding-top: 160px;
+                width: 80%;
             }
-            #logo_img {
+            #slogan {
+                margin-top: 43px;
+                font-size: 1.2em;
+            }
+            #cta {
+                font-size: 2em;
+            }
+            #separator {
+                margin-top: 12px;
+                width:55%;
+            }
+            #product {
                 width: 80%;
             }
         }
+        .grad {
+            position: absolute;
+            background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%);
+            background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%);
+            background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );
+            width: 200%;
+            height: 100%;
+            top: 0;
+        }
+
     </style>
 </head>
 <body>
     <div id="content">
-    	<div id="logo">
-	        <img id="logo_img" class="centered" src="img/logo.svg"/>
-	    </div>
+        <img id="product" src="img/product.jpg"/>
+        <div id="grad_2" class="grad"></div>
+        <img id="logo" class="centered" src="img/logo.svg"/>
+        <div id="grad" class="grad"></div>
         <div id="slogan" class="centered text">unique handmade jewellery</div>
-        <img id="separator"  class="centered" src="img/separator.svg"/>
-        
+        <img id="separator"  class="centered" src="img/separator.svg"/> 
+        <div id="cta" class="text">coming soon</div>
     </div>
-    <div id="cta" class="text">coming soon</div>
+    
 </body>
 </html>
