--- a/com/varhomokis/index.html
+++ b/com/varhomokis/index.html
@@ -21,6 +21,7 @@
             height: 100%;
     		font-family: "Poppins", Helvetica, Arial, sans-serif;
             color: #9d8640;
+            background: #FFFFFF;
     	}
         #content {
         	position: relative;
