--- a/fractal_machine/sliders/index.html
+++ b/fractal_machine/sliders/index.html
@@ -102,7 +102,7 @@
 <body>
     <!-- <img id="bg" class="center" src="img/castilo.png"/> -->
     <div id="stage"></div>
-    <img id="shirt" class="center" src="img/shirt.png"/>
+    <!-- <img id="shirt" class="center" src="img/shirt.png"/> -->
     <div id="header">
         <img id="logo" src="img/logo.png"/>
         <img id="menu" src="img/menu.png"/>
