--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -38,6 +38,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         }
         button {
             float: left;
+            margin: 10px;
         }
         h1 {
             padding: 20px;
@@ -56,6 +57,14 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             width: 100%;
             height: 100%;
         }
+        #white {
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            transition: opacity 4s cubic-bezier(0.4, 0, 0.2, 1);
+            transition-delay: 0.36s;
+            pointer-events: none;
+        }
     </style>
 
     <script>
@@ -68,6 +77,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         var zoomFactor = 0.26;
 
         window.onload = function(e) {
+            document.querySelector('#white').style.opacity = 0;
             pinchZoom = document.querySelector('pinch-zoom');
             zoomImage = document.getElementById("zoom_image");
             cover = document.getElementById("cover");
@@ -84,7 +94,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                     scale: zoomValue,
                     x: 0,
                     y: 0,
-                    allowChangeEvent: false,
+                    allowChangeEvent: true,
                 });
                 onResize();
                 onChange();
@@ -133,6 +143,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             };
 
             zoomImage.addEventListener('load', imageLoaded);
+            vectorImage.addEventListener('load', imageLoaded);
+
             zoomImage.src = 'floor_plan.svg';
 
             function onChange(){
@@ -141,10 +153,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 vectorCover.style.height = pinchZoom.scale * H/W*imageWidth+'px';
             };
 
+            function loadImage(){
+                vectorImage.src = 'screwdriver.svg';
+                
+            }
             pinchZoom.addEventListener('change', onChange);
 
             document.getElementById('plus').addEventListener('click', zoomIn);
             document.getElementById('minus').addEventListener('click', zoomOut);
+            document.getElementById('load').addEventListener('click', loadImage);
             window.addEventListener('resize', onResize);
         }
     </script>
@@ -175,8 +192,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         </pinch-zoom>
     </div>
     <div class="buttons">
-        <button id="plus">+</button><button id="minus">-</button>
+        <button id="plus">+</button>
+        <button id="minus">-</button>
+        <button id="load">Load new</button>
     </div>
+    <div id="white"></div>
 </body>
 
 
@@ -541,7 +561,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 let scale = _scale;
                 let { x = this.x, y = this.y, } = opts;
                 if(_scale < this.minScale ){
-                    this.setTransform({scale:this.minScale, x:0, y:0, allowChangeEvent:true});
+                    this.setTransform({scale:this.minScale+0.00001, x:0, y:0, allowChangeEvent:true});
                     return;
                 };
             
