--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -410,7 +410,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                             x: (point.pos.x+imageWidth/2) * pinchZoom.scale + pinchZoom.x + dotRadius,
                             y: (point.pos.y+imageHeight/2+topGap) * pinchZoom.scale + pinchZoom.y + dotRadius,
                         }
-                        if(distance(target, pos) < dotRadius ){
+                        //TODO: make the click target bigger only on handheld devices 
+                        if(distance(target, pos) < dotRadius * 1.3 ){
                             dotClick(i);
                             clicked = true;
                         }
