--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -168,7 +168,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             opacity:0;
             position: absolute;
             width: 42vw;
-            height: 24vh;
+            height: 35vh;
             left: 18px;
             bottom: 18px;
             box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.133);
@@ -182,15 +182,16 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         #desc_title {
             position: relative;
             font-size: 1.2em;
-            padding: 1.4em;
+            padding: 2em 1.6em 2em 1.6em;
         }
         #desc_text {
             position: relative;
             font-family: Helvetica, Arial, sans-serif;
             font-weight: normal;
             font-size: 1em;
-            padding: 0 1.4em 1.4em 1.4em;
+            padding: 0 1.6em 2em 1.6em;
             white-space: pre-wrap;
+            line-height: 1.4;
         }
 
         @media all and (max-width: 640px) {
@@ -343,9 +344,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 zoomImage.style.display = 'none';
                 resetDots(elements[step].points);
                 onResize(null, true);
-                topGap = (H/pinchZoom.scale-imageHeight)/2;
+                resetTopGap();
             };
 
+            function resetTopGap() {
+                topGap = (H/pinchZoom.scale-imageHeight)/2;
+            }
             function stopAnimation(e) {
                 //vectorCover.classList.add("animate");
                 vectorCover.classList.remove("animate");
@@ -408,6 +412,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                     y: 0,
                     allowChangeEvent: false,
                 });
+                resetTopGap();
                 onChange(e, reset);
             };
 
