--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -174,9 +174,24 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.133);
             border-radius: 8px;
             background: white;
+            overflow: hidden;
+            transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1), transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+            
+        }
+        #scroll_box {
+            width:100%;
+            height:100%;
             overflow-x: hidden;
             overflow-y: scroll;
-            transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1), transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        #gradient {
+            position:absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            background: -moz-linear-gradient(top, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.05) 8%, rgba(255,255,255,0) 92%, rgba(255,255,255,0.8) 100%);
+            background: -webkit-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.05) 8%,rgba(255,255,255,0) 92%,rgba(255,255,255,0.8) 100%);
+            background: linear-gradient(to bottom, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.05) 8%,rgba(255,255,255,0) 92%,rgba(255,255,255,0.8) 100%);
         
         }
         #desc_title {
@@ -314,7 +329,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         }
 
         window.onload = function(e) {
-            toggleFullScreen();
+            document.getElementById("logo").addEventListener('click', toggleFullScreen);
             document.querySelector('#white').style.opacity = 0;
             pinchZoom = document.querySelector('pinch-zoom');
             zoomImage = document.getElementById("zoom_image");
@@ -594,12 +609,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         </div>
     </div>
     <div id="desc">
-        <div id="desc_title">
-            Univerzális csavarhúzó
+        <div id="scroll_box">
+            <div id="desc_title">
+                Univerzális csavarhúzó
+            </div>
+            <div id="desc_text">
+                Univerzális csavarhúzó
+            </div>
         </div>
-        <div id="desc_text">
-            Univerzális csavarhúzó
-        </div>
+        <div id="gradient"></div>
     </div>
     </div>
     <div id="white"></div>
