--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -639,9 +639,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 }
             };
             function clearActiveDot(){
-                elements[step].points.forEach(dot => {
-                    document.getElementById(dot.id).classList.remove('activeDot');
-                });
+                if(elements[step] && elements[step].points){
+                    elements[step].points.forEach(dot => {
+                        document.getElementById(dot.id).classList.remove('activeDot');
+                    });
+                }
             }
             function onChange(e, reset){
                 vectorCover.style.transform = 'translate('+pinchZoom.x+'px, '+pinchZoom.y+'px)';
