--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, width=device-width"/>
     <meta name="HandheldFriendly" content="true">
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es6"></script>
     <title>Audi VR Plans</title>
 
 <!--
@@ -306,6 +307,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         @media all and (max-width: 640px) {
             #logo {
                 left: 16px;
+            }
+            #print {
+                right: 16px;
             }
             #desc {
                 width: 55vw;
