--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no"/>
     <meta name="HandheldFriendly" content="true">
-    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es6"></script>
+    <script src="https://polyfill.io/v3/polyfill.js?features=es5,es6,es7"></script>
     <title>Audi VR Plans</title>
 
 <!--
@@ -735,7 +735,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 }
             }
 
-            
             pinchZoom.addEventListener('change', onChange);
             pinchZoom.addEventListener('click', onClick);
             pinchZoom.addEventListener('touchstart' , onTap);
