--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -366,6 +366,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             right: 144px;
             padding-top: 8px;
             padding-bottom: 18px;
+            z-index: 1;
             overflow: hidden;
             border-radius: 21px;
             box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.10);
