--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
     <meta name="HandheldFriendly" content="true">
     <title>Audi VR Plans</title>
 
@@ -712,6 +712,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 if(!isMenuShow){
                     isMenuShow = true;
                     menu.classList.add('show_menu');
+                    hideDetails();
                 }
                 elements.forEach((curr, i) => 
                     document.getElementById('menu_'+curr.id).style.color = (activeMenu == i  ? '#b6b1a9' : '#000000')
