--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
     <meta name="HandheldFriendly" content="true">
     <title>Audi VR Plans</title>
 
@@ -489,32 +489,32 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             {
                 name:'Robot platform',
                 id:'robot-platform',
-                src:'big_robot.svg',
+                src:'robot.svg',
             },
             {
                 name:'Eszköz platform',
                 id:'eszkoz-platform',
-                src:'big_robot.svg',
+                src:'robot.svg',
             },
             {
                 name:'Ékszíj kezelő',
                 id:'ekszij',
-                src:'big_robot.svg',
+                src:'robot.svg',
             },
             {
                 name:'Tengely beállító',
                 id:'tengely',
-                src:'big_robot.svg',
+                src:'robot.svg',
             },
             {
                 name:'Csavar ellentartó',
                 id:'csavar-ellentarto',
-                src:'big_robot.svg',
+                src:'robot.svg',
             },
             {
                 name:'Munkaasztal',
                 id:'munkaasztal',
-                src:'big_robot.svg',
+                src:'workbench.svg',
             },
             {
                 name:'Dokkoló',
