--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -437,7 +437,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             {
                 name:'Alaprajz',
                 id:'alaprajz',
-                src:'floor_plan.svg',
+                src:'floor.svg',
                 dotStart: 0.65,
                 points: [
                     {
@@ -494,22 +494,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
             {
                 name:'Eszköz platform',
                 id:'eszkoz-platform',
-                src:'robot.svg',
+                src:'small_robot.svg',
             },
             {
                 name:'Ékszíj kezelő',
                 id:'ekszij',
-                src:'robot.svg',
+                src:'belt_robot.svg',
             },
             {
-                name:'Tengely beállító',
+                name:'Forgás beállító',
                 id:'tengely',
-                src:'robot.svg',
-            },
-            {
-                name:'Csavar ellentartó',
-                id:'csavar-ellentarto',
-                src:'robot.svg',
+                src:'helper_robot.svg',
             },
             {
                 name:'Munkaasztal',
