--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -215,6 +215,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
         #scroll_box {
             width:100%;
             height: auto;
+            max-height: 35vh;
             overflow-x: hidden;
             overflow-y: auto;
         }
