--- a/com/zoom/index.html
+++ b/com/zoom/index.html
@@ -775,39 +775,71 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                       id: 'teleszkop',
                       title: 'Teleszkópos emelőrudak',
                       pos: {x:-175, y:-386},
-                      desc: 'Az álványhoz csatlakozás után a karok teleskópos emelőrudjai kicsúsznak és szekvenciálisan felfeszitik az ékszíjat a motoron lévő tárcsákra',
+                      desc: 'Az álványhoz csatlakozás után a karok teleskópos emelőrúdjai kicsúsznak és szekvenciálisan felfeszitik az ékszíjat a motoron lévő tárcsákra',
                   },
                 ],
             },
             {
-                name:'Forgás beállító',
-                id:'tengely',
+                name:'Precíziós forgatókar',
+                id:'forgatokar',
                 src:'helper_robot.svg',
                 dotStart: 0.4,
                 points: [
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'platform',
+                      title: 'Szállító platform',
+                      pos: {x:773, y:7},
+                      desc: 'Az eszközt mozgató robot platformról <a href="'+url+'?page=eszkoz-platform'+'">további információ itt.</a>',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'elv',
+                      title: 'Működési elv',
+                      pos: {x:743, y:439},
+                      desc: 'A robotkar optikai szezorai segítségével azonosítja a forgatni kívant csavart es közelébe helyezkedik. <br><br>Ezután a forgatófej lézer pásztázással pontosítja a koordinátákat és négy feszítőkarja közé szorítja a csavart.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'kontrol',
+                      title: 'Irányítópanel',
+                      pos: {x:790, y:-173},
+                      desc: 'A precíziós forgatást egy kijelzővel ellátott irányítópanelen szabályozhatja a felhasználó két gomb segítségével.<br><br>Amíg a gombokat nyomva tartja, a forgás üteme exponenciálisan növekszik mindkét irányba a kihívás fokozása érdekében.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'karok',
+                      title: 'Inverz kinematikus karok',
+                      pos: {x:-134, y:-444},
+                      desc: 'Dinamikus felépítése lehetővé teszi a hozzáférést a legrejtettebb csavarokhoz is. A karbon csövekből készült karok könnyű súlyuk miatt gyors és precíz mozgásokat tesznek lehetővé.',
+                  },
+                  {
+                      id: 'pozicionalas',
+                      title: 'Autómatikus irányítópanel pozícionálás',
+                      pos: {x:-691, y:-462},
+                      desc: 'A platform csatlakozása utan az eszköz autómatikusan egy, a felhasznalónak kényelmes pozícióba mozgatja az irányítópanelt.'
+                  },
+                  {
+                      id: 'kompakt',
+                      title: 'Kompakt mozgás',
+                      pos: {x:-400, y:-265},
+                      desc: 'A művelett befejezése után a robotkarok becsukódnak és az elektromágneses rögzítés feloldása előtt az eszköz a platform súlyközéppontjába helyezkedik a beépített sínrendszer segítségével.',
+                  },
+                ],
+            },
+            {
+                name:'Teszt robot',
+                id:'teszt',
+                src:'tester_robot.svg',
+                dotStart: 0.4,
+                points: [
+                  {
+                      id: 'platform',
+                      title: 'Szállító platform',
+                      pos: {x:773, y:7},
+                      desc: 'Az eszközt mozgató robot platformról <a href="'+url+'?page=eszkoz-platform'+'">további információ itt.</a>',
+                  },
+                  {
+                      id: 'robot',
+                      title: 'Precíziós forgatókar, cloud irányítással',
+                      pos: {x:-560, y:-490},
+                      desc: 'Teljes egészében követi a <a href="'+url+'?page=forgatokar'+'">precíziós forgatókar</a> működési mechanizmusát, azzal a kivétellel hogy manuális irányító panel helyett egy extra kommunikációs egység van a robotkarra csatolva, és azon keresztül irányítja a központi rendszer.<br><br>A teszteredmények a munkaasztalba épitett kijelzőn es az AR szemüvegen keresztül követhetők nyomon.',
                   },
                 ],
             },
@@ -818,29 +850,42 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 dotStart: 0.4,
                 points: [
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'hajtomu',
+                      title: 'Elektromágneses talpak',
+                      pos: {x:1000, y:-69},
+                      desc: 'A munkaasztal mozgatása ugyanolyan elven működik mint a platform többi eleme, csak a súlykülöngség miatt lényegesen kisebb kivitelben.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'talpak',
+                      title: 'Dinamikus tartókarok',
+                      pos: {x:731, y:575},
+                      desc: 'A talpak tartóelemei dinamikusan forgathatók a legmegfelelőbb helykihasználás érdekében.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'kijelzo',
+                      title: 'Érintőképernyő',
+                      pos: {x:-264, y:468},
+                      desc: 'Egy ütéssálló kijelzőtt található az asztallapba építve amely informacióátadásra és -bevittelre is szolgál.<br><br>Például nyomon követhetjük a munka fázisait, információkat jelenít meg a következő lépéssel kapcsolatban, hibánál pirosan villog és a munkafolyamattal kapcsolatos gombokat is itt kezelhetjük.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'alkatrészek',
+                      title: 'Rendezett alkatrészek',
+                      pos: {x:-463, y:605},
+                      desc: 'Az assztalra lerakott fém alkatrészek mágneses segítséggel a helyükre mozognak.',
                   },
+                  {
+                      id: 'felulet',
+                      title: 'Süllyesztett asztalfelület',
+                      pos: {x:-866, y:465},
+                      desc: 'A leguruló tárgyak elkerülése érdekében az asztallap sullyesztett, peremet képezve az aztal teljes körvonalán.',
+                  },
+                  {
+                      id: 'kontrol',
+                      title: 'Magasság állítása',
+                      pos: {x:-510, y:-261},
+                      desc: 'Az asztal beállításáért egy kisebb elektromos motor felelős a taróoszlopba építve. Manuális irányítógombokat is találunk burkolatán.',
+                  },
+
                 ],
             },
             {
@@ -850,28 +895,22 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
                 dotStart: 0.4,
                 points: [
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'csatlakozo',
+                      title: 'Univerzális csatlakozó',
+                      pos: {x:-778, y:-450},
+                      desc: 'A platform elemei szabadon csatlakozhatnak a dokkolóhoz, és az egységes csatlakozó fémtalpain keresztül mind mágnesesen rögzítik magukat, mind nagyteljesítményű áramforráshoz is csatlakoznak.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'akkumulator',
+                      title: 'Akkumulátor töltő',
+                      pos: {x:-52, y:535},
+                      desc: 'A platform nagyobb teljesítményű egységeinek nem elég a részleges feltöltés, ezért azok eltávolítható akkumulátorait itt tölthetjük.',
                   },
                   {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
-                  },
-                  {
-                      id: '',
-                      title: '',
-                      pos: {x:623, y:158},
-                      desc: '',
+                      id: 'kijelzo',
+                      title: 'Kijelző',
+                      pos: {x:29, y:303},
+                      desc: 'Visszacsatolást ad a csatlakozott elemek töltöttségi állapotáról.',
                   },
                 ],
             },
